<resources>
    <string name="app_name">普通天气</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">https://github.com/robinying</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="loading">加载中...</string>
    <string name="positive_button">确定</string>
    <string name="negative_button">取消</string>
    <string name="location_failed">定位失败</string>

    <string name="main_home_title">天气</string>
    <string name="main_air_title">空气</string>
    <string name="main_city_title">城市</string>
    <string name="city_empty_text">城市列表为空</string>
    <string name="clothes_title">穿衣指数---</string>
    <string name="sports_title">运动指数---</string>
    <string name="travel_title">旅游指数---</string>
    <string name="flu_title">感冒指数---</string>
    <string name="uv_title">防晒指数---</string>
    <string name="cw_title">洗车指数---</string>
    <string name="air_title">空气指数---</string>

    <string name="data_from_title">天气数据来源于和风天气</string>
    <string name="air_now_city_com">主要污染物:</string>
    <string name="pm25_title">PM2.5细微颗粒</string>
    <string name="pm10_title">PM10颗粒物</string>
    <string name="so2_title">SO2二氧化硫</string>
    <string name="co_title">CO一氧化碳</string>
    <string name="no2_title">NO2二氧化氮</string>
    <string name="o3_title">O3臭氧</string>
    <string name="cofirm_delete_city">是否删除这个城市</string>
    <string name="title_activity_settings">设置</string>
    <string name="clear_cache_title">清除缓存</string>
    <string name="application_version">软件版本</string>
    <string name="update_settings">检查更新</string>
    <string name="about_code"><a href='https://github.com/robinying/HeWeather'>https://github.com/robinying/HeWeather</a></string>
    <string name="updatecontent">1.新版本震撼来袭\n2.欢迎Star和Issue\n5.github:<a href='https://github.com/robinying'>https://github.com/robinying</a></string>
    <string name="copy_success">复制成功</string>
    <string name="update_title">更新版本</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
