<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <com.yubin.heweather.view.ItemView
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:itemtitle="@string/clear_cache_title"
        app:show_bottom_line="false"
        app:stub_type="val_right_no" />

    <com.yubin.heweather.view.ItemView
        android:id="@+id/version_settings"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:itemtitle="@string/application_version"
        app:show_bottom_line="false"
        app:stub_type="val_right_no" />


    <com.yubin.heweather.view.ItemView
        android:id="@+id/update_settings"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:itemtitle="@string/update_settings"
        app:show_bottom_line="false"
        app:stub_type="val_right_no" />

    <LinearLayout
        android:id="@+id/github_ll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/github_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_github" />

        <TextView
            android:id="@+id/github_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/about_code"
            android:textColor="@color/light_blue_500"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>