<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_margin"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:id="@+id/air_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/air_city_aqi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="空气质量指数--" />

            <TextView
                android:id="@+id/air_city_qlty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:textStyle="bold"
                android:textSize="18sp"
                tools:text="轻度污染" />
        </LinearLayout>

        <TextView
            android:id="@+id/cont_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/air_ll"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/air_now_city_com" />

        <LinearLayout
            android:id="@+id/main_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cont_tv"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/right_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/pm25_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/pm25_title" />

                <TextView
                    android:id="@+id/pm25_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    tools:text="27" />

                <TextView
                    android:id="@+id/so2_tv"
                    android:layout_below="@id/pm25_tv"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/so2_title"/>

                <TextView
                    android:id="@+id/so2_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pm25_num"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    tools:text="27" />

                <TextView
                    android:id="@+id/co_tv"
                    android:layout_below="@id/so2_tv"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/co_title"/>

                <TextView
                    android:id="@+id/co_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/so2_num"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    tools:text="1.1" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/left_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/pm10_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/pm10_title" />

                <TextView
                    android:id="@+id/pm10_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    tools:text="38" />

                <TextView
                    android:id="@+id/no2_tv"
                    android:layout_below="@id/pm10_tv"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/no2_title"/>

                <TextView
                    android:id="@+id/no2_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pm10_num"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    tools:text="65" />

                <TextView
                    android:id="@+id/o3_tv"
                    android:layout_below="@id/no2_tv"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/o3_title"/>

                <TextView
                    android:id="@+id/o3_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/no2_num"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    tools:text="7" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/push_time"
            android:layout_below="@id/main_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="10sp"
            tools:text="数据更新时间：2018-11-21 09:00"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>
